k8s/21-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: km-frontend
  namespace: km-agent
spec:
  selector:
    app: km-frontend
  ports:
    - port: 80
      targetPort: 80
